--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <title>Funcdle</title>
     <script type="text/javascript" charset="UTF-8" src="https://cdn.jsdelivr.net/npm/jsxgraph/distrib/jsxgraphcore.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/jsxgraph/distrib/jsxgraph.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -9,37 +11,61 @@
       integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ=="
       crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/javascript" src="./target/scala-2.13/graph-wordle-fastopt.js"></script>
-    <script type="text/javascript" src="./index.js"></script>
-    <style>
-table {
-  border-collapse: collapse;
-}
-td {
-  border: 1px solid #444444;
-  width: 30px;
-  text-align: center;
-  font-size: 20pt;
-}
-.pretty {
-  border: none;
-  width: 200px;
-}
-.green {
-  background-color: #6aaa64;
-}
-.yellow {
-  background-color: #c9b458;
-}
-.gray {
-  background-color: #86888a;
-}
-    </style>
+    <link rel="stylesheet" href="./index.css">
   </head>
   <body>
+    <h1>Funcdle</h1>
     <div id="jxgbox" class="jxgbox" style="width:500px; height:500px;"></div>
-    <p>√ ㏑</p>
-    <input id="input" />
-    <button onclick="run()">ok</button>
-    <div id="div-trial"></div>
+    <div class="gb">
+      <div class="gb-row"><div></div><div></div><div></div><div></div><div></div></div>
+      <div class="gb-row"><div></div><div></div><div></div><div></div><div></div></div>
+      <div class="gb-row"><div></div><div></div><div></div><div></div><div></div></div>
+      <div class="gb-row"><div></div><div></div><div></div><div></div><div></div></div>
+      <div class="gb-row"><div></div><div></div><div></div><div></div><div></div></div>
+      <div class="gb-row"><div></div><div></div><div></div><div></div><div></div></div>
+    </div>
+    <div class="kb">
+      <div class="kb-row">
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>0</button>
+      </div>
+      <div class="kb-row">
+        <button class="kb-button-enter">Enter</button>
+        <button>x</button>
+        <button>+</button>
+        <button>-</button>
+        <button>*</button>
+        <button>/</button>
+        <button>^</button>
+        <button>√</button>
+        <button>㏑</button>
+        <button class="kb-button-backspace">Backspace</button>
+      </div>
+    </div>
+    <p>Your input is a math formula possibly containing a variable "x". After
+    you enter a formula "f(x)", the graph of "y=f(x)" will be drawn. If a point
+    on your graph is vertically different from a point on the answer graph by
+    less than 0.5, the point will be colored black. Otherwise, the point will be
+    colored gray.
+    </p>
+    <p class="bm">
+      Wordle code has been from
+      <a href="https://dougmcleod.ca/share/wordle.html">https://dougmcleod.ca/share/wordle.html</a>.
+    </p>
+    <p class="bm">
+      Any suggestion or bug report shall be sent to jaemin.hong [at] kaist.ac.kr.
+    </p>
+    <p>
+      GitHub: <a href="https://github.com/Medowhill/funcdle">https://github.com/Medowhill/funcdle</a>
+    </p>
+    <script src="./index.js"></script>
   </body>
 </html>
