fix bug, add README

--- a/funcdle.html
+++ b/funcdle.html
@@ -56,16 +56,7 @@
     less than 0.5, the point will be colored black. Otherwise, the point will be
     colored gray.
     </p>
-    <p class="bm">
-      Wordle code has been from
-      <a href="https://dougmcleod.ca/share/wordle.html">https://dougmcleod.ca/share/wordle.html</a>.
-    </p>
-    <p class="bm">
-      Any suggestion or bug report shall be sent to jaemin.hong [at] kaist.ac.kr.
-    </p>
-    <p>
-      GitHub: <a href="https://github.com/Medowhill/funcdle">https://github.com/Medowhill/funcdle</a>
-    </p>
+    <a href="https://github.com/Medowhill/funcdle">https://github.com/Medowhill/funcdle</a>
     <script src="./funcdle.js"></script>
   </body>
 </html>
