--- a/funcdle.html
+++ b/funcdle.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <h1>Funcdle</h1>
-    <div id="jxgbox" class="jxgbox" style="width:500px; height:500px;"></div>
+    <div id="jxgbox" class="jxgbox"></div>
     <div class="gb">
       <div class="gb-row"><div></div><div></div><div></div><div></div><div></div></div>
       <div class="gb-row"><div></div><div></div><div></div><div></div><div></div></div>
